# ubiquitous-enigma

./: .dockerignore  .env.docker.example  .env.example  .env.windows.example  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements-min.txt  requirements.txt  run_api.sh  run_worker.sh
.github/workflows/: tests.yml
app/: __init__.py  config.py  main.py  obsidian.py  prompts.py  reporting.py  worker.py
static/: index.html
tests/: test_smoke.py
