[project]
name = "voiceflow-ai"
version = "1.0.0"
description = "Локальный пайплайн транскрибации, саммаризации и экспорта встреч в Obsidian."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "celery>=5.3",
  "redis>=5.0",
  "faster-whisper>=1.0",
  "whisperx>=3.3",
  "silero-vad>=5.1",
  "tqdm>=4.66",
  "ollama>=0.3",
  "librosa>=0.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
diarization = [
  "torch",
  "torchvision",
  "torchaudio",
  "nemo_toolkit[asr]>=1.30",
  "soundfile>=0.12",
  "numpy>=1.24",
  "scikit-learn>=1.3",
]
full = [
  "pytest>=8.0",
  "httpx>=0.27",
  "torch",
  "torchvision",
  "torchaudio",
  "nemo_toolkit[asr]>=1.30",
  "soundfile>=0.12",
  "numpy>=1.24",
  "scikit-learn>=1.3",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["static*", "uploads*", "obsidian_vault*", "tests*"]
